--- a/test.html
+++ b/test.html
@@ -2,8 +2,8 @@
 <head><title></title> </head> 
 <body>
 <h2></h2><p>
-<form action="tcpwebserver.py" method=post>
-<input type=file><br>
+<form action="gettext.py" method=post>
+<input type="text" name="statement">
 <input type="submit" value="submit">
 </form> 
 </body>
